[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/InputBind/Inputscene.gd" type="Script" id=1]
[ext_resource path="res://addons/InputBind/EventDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/InputBind/theme/btn/btn_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/InputBind/theme/btn/btn_press.tres" type="StyleBox" id=4]
[ext_resource path="res://addons/InputBind/theme/btn/btn_hover.tres" type="StyleBox" id=5]

[node name="Control" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1021.0
margin_bottom = 509.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1021.0
margin_bottom = 509.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1021.0
margin_bottom = 483.0
size_flags_vertical = 3

[node name="actions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1021.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 487.0
margin_right = 1021.0
margin_bottom = 509.0
custom_constants/separation = 10
alignment = 1

[node name="default" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 457.0
margin_right = 513.0
margin_bottom = 22.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "default"

[node name="save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 523.0
margin_right = 564.0
margin_bottom = 22.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "save"

[node name="eventDialog" parent="." instance=ExtResource( 2 )]

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 56.0
margin_bottom = 40.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 344.0
margin_bottom = 102.0
popup_exclusive = true
window_title = "警告！"
dialog_text = "event save successful"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
